slurm-3471941.out
NODELIST=gammagpu12
MASTER_ADDR=gammagpu12
Traceback (most recent call last):
  File "/fs/nexus-scratch/sjxu/svd-temporal-controlnet/eval_svd_controlnet.py", line 77, in <module>
    from pipeline.pipeline_stable_video_diffusion_controlnet import StableVideoDiffusionPipelineControlNet
  File "/fs/nexus-scratch/sjxu/svd-temporal-controlnet/pipeline/pipeline_stable_video_diffusion_controlnet.py", line 427
    2. Define call parameters
       ^
SyntaxError: invalid syntax
srun: error: gammagpu12: task 0: Exited with exit code 1
